<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:background="?android:attr/selectableItemBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/colorTag"
        android:layout_width="@dimen/small_dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/local_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding20"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/local_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:textSize="@dimen/text_xxxlarge"
            android:gravity="center"
            android:includeFontPadding="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/range"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_middle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/local_time"
            app:layout_constraintBottom_toTopOf="@id/repeat"/>

        <TextView
            android:id="@+id/repeat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_middle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/range"
            app:layout_constraintBottom_toTopOf="@id/label"/>

        <TextView
            android:id="@+id/label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_middle"
            android:text="@string/test"
            android:maxLines="2"
            android:ellipsize="end"
            android:visibility="gone"
            android:layout_marginEnd="@dimen/padding10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/icon_layout"
            app:layout_constraintTop_toBottomOf="@id/repeat"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/on_off"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/local_time"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/icon_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/warning"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/ic_warning"
                android:visibility="gone"
                android:contentDescription="@null"
                android:layout_marginEnd="5dp"
                app:tint="@color/color1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/timezone"/>

            <ImageView
                android:id="@+id/timezone"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/ic_world_white"
                android:contentDescription="@null"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ringtone"/>

            <ImageView
                android:id="@+id/ringtone"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/ic_ringtone_white"
                android:contentDescription="@null"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/vibration"/>

            <ImageView
                android:id="@+id/vibration"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/ic_vibration_white"
                android:contentDescription="@null"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/snooze"/>

            <ImageView
                android:id="@+id/snooze"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/ic_snooze_white"
                android:contentDescription="@null"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>