...

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding20"
        android:layout_gravity="center|bottom"
        android:text="@string/apply"
        android:textColor="?attr/colorPrimary"
        android:gravity="center"
        app:icon="@drawable/ic_action_done_white"
        app:iconTint="?attr/colorPrimary"
        app:backgroundTint="@color/background"/>

...
